Fix base url on assets

--- a/guide/views/index.html
+++ b/guide/views/index.html
@@ -10,37 +10,37 @@
     <div class="container">
       <div class="masthead">
   <ul class="nav nav-pills pull-right">
-    <li><a href="/">Home</a></li>    <li class="active"><a href="/guide/">Guide</a></li>  </ul>
-  <h3><a href="/">emvc</a></h3>
+    <li><a href="/emvc">Home</a></li>    <li class="active"><a href="/emvc/guide/">Guide</a></li>  </ul>
+  <h3><a href="/emvc">emvc</a></h3>
 </div>
 
       
 <div class="row guide">
   <div class="span3 toc">
     <ul class="unstyled">
-  <li><a href="/guide/">Overview</a></li>
-  <li><a href="/guide/get-started/">Get Started</a></li>
-  <li><a href="/guide/architecture/">Architecture</a></li>
-  <li><a href="/guide/application/">Application</a></li>
+  <li><a href="/emvc/guide/">Overview</a></li>
+  <li><a href="/emvc/guide/get-started/">Get Started</a></li>
+  <li><a href="/emvc/guide/architecture/">Architecture</a></li>
+  <li><a href="/emvc/guide/application/">Application</a></li>
   <ul>
-    <li><a href="/guide/directory-structure/">Directory Structure</a></li>
-    <li><a href="/guide/initialization/">Initialization</a></li>
+    <li><a href="/emvc/guide/directory-structure/">Directory Structure</a></li>
+    <li><a href="/emvc/guide/initialization/">Initialization</a></li>
   </ul>
-  <li><a href="/guide/routing/">Routing</a></li>
+  <li><a href="/emvc/guide/routing/">Routing</a></li>
   <ul>
-    <li><a href="/guide/resources/">Resources</a></li>
-    <li><a href="/guide/namespaces/">Namespaces</a></li>
-    <li><a href="/guide/verbs/">Verbs</a></li>
+    <li><a href="/emvc/guide/resources/">Resources</a></li>
+    <li><a href="/emvc/guide/namespaces/">Namespaces</a></li>
+    <li><a href="/emvc/guide/verbs/">Verbs</a></li>
   </ul>
-  <li><a href="/guide/controllers/">Controllers</a></li>
+  <li><a href="/emvc/guide/controllers/">Controllers</a></li>
   <ul>
-    <li><a href="/guide/filters/">Filters</a></li>
-    <li><a href="/guide/formats/">Formats</a></li>
+    <li><a href="/emvc/guide/filters/">Filters</a></li>
+    <li><a href="/emvc/guide/formats/">Formats</a></li>
   </ul>
-  <li><a href="/guide/views/">Views</a></li>
-  <li><a href="/guide/datastores/">Datastores</a></li>
+  <li><a href="/emvc/guide/views/">Views</a></li>
+  <li><a href="/emvc/guide/datastores/">Datastores</a></li>
   <ul>
-    <li><a href="/guide/mongoose/">Mongoose</a></li>
+    <li><a href="/emvc/guide/mongoose/">Mongoose</a></li>
   </ul>
 </ul>
 
@@ -79,9 +79,9 @@ in your site follow a different layout or are self-contained in an EJS template.
   </div>
 </div>
       <div class="footer">
-  <p>&copy; 2011-2014 Jared Hanson</p>
+  <p>&copy; 2016 Nicholas Penree. Based on [Locomotive.js](http://www.locomotivejs.org) by Jared Hanson.</p>
 </div>
-      
+
 
     </div>
   </body>
