Fix base url on assets

--- a/guide/views/index.html
+++ b/guide/views/index.html
@@ -79,7 +79,7 @@ in your site follow a different layout or are self-contained in an EJS template.
   </div>
 </div>
       <div class="footer">
-  <p>&copy; 2016 Nicholas Penree. Based on [Locomotive.js](http://www.locomotivejs.org) by Jared Hanson.</p>
+  <p>&copy; 2016 Nicholas Penree. Based on <a href="http://www.locomotivejs.org">Locomotive</a> by Jared Hanson.</p>
 </div>
 
 
